# SERGIO

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  simulation.py
.claude/skills/anywidget-generator/: SKILL.md
Demo/: sergio.py
SERGIO/: __init__.py  sergio.py
co_reg_sim/: build_report.py  grn.py  notebook.py  simulate.py  validate.py
co_reg_sim/output/: Interaction.txt  Regs.txt  grn_metadata.npz  report.html  scgp_report.html  simulations.npz
co_reg_sim/scgp_benchmark/: run.py
