[project]
name = "sergio"
version = "0.1.0"
description = "SERGIO: A Single-Cell Expression Simulator Guided by Gene Regulatory Networks"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "networkx",
    "pandas",
    "marimo",
    "matplotlib>=3.9.4",
    "scikit-learn>=1.6.1",
    "anndata>=0.10.9",
    "torch>=2.8.0",
    "tqdm>=4.67.3",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["SERGIO"]
